tests/golden/custom/rabbitmq-operator/rabbitmq-operator/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-rabbitmq-operator
  name: syn-rabbitmq-operator
