tests/golden/custom/rabbitmq-operator/rabbitmq-operator/10_issuer.yaml
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: messaging-topology-operator
  name: messaging-topology-selfsigned-issuer
  namespace: syn-rabbitmq-operator
spec:
  selfSigned: {}
