tests/golden/custom/rabbitmq-operator/rabbitmq-operator/10_rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rabbitmq-operator
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
  name: rabbitmq-cluster-leader-election-rolebinding
  namespace: syn-rabbitmq-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: rabbitmq-cluster-leader-election-role
subjects:
  - kind: ServiceAccount
    name: rabbitmq-cluster-operator
    namespace: syn-rabbitmq-operator
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: messaging-topology-operator
  name: messaging-topology-leader-election-rolebinding
  namespace: syn-rabbitmq-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: messaging-topology-leader-election-role
subjects:
  - kind: ServiceAccount
    name: messaging-topology-operator
    namespace: syn-rabbitmq-operator
