tests/golden/custom/rabbitmq-operator/rabbitmq-operator/10_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: messaging-topology-operator
    control-plane: controller-manager
  name: messaging-topology-controller-metrics-service
  namespace: syn-rabbitmq-operator
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: messaging-topology-operator
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: messaging-topology-operator
  name: messaging-topology-webhook-service
  namespace: syn-rabbitmq-operator
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/name: messaging-topology-operator
    control-plane: controller-manager
