tests/golden/custom/rabbitmq-operator/rabbitmq-operator/10_serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: rabbitmq-cluster-operator
  namespace: syn-rabbitmq-operator
