tests/golden/custom/rabbitmq-operator/rabbitmq-operator/10_validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: syn-rabbitmq-operator/messaging-topology-serving-cert
  name: messaging-topology-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-binding
    failurePolicy: Fail
    name: vbinding-v1beta1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - bindings
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-exchange
    failurePolicy: Fail
    name: vexchange.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - exchanges
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-federation
    failurePolicy: Fail
    name: vfederation.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - federations
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-operatorpolicy
    failurePolicy: Fail
    name: voperatorpolicy-v1beta1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - operatorpolicies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-permission
    failurePolicy: Fail
    name: vpermission-v1beta1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - permissions
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-policy
    failurePolicy: Fail
    name: vpolicy.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - policies
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-queue
    failurePolicy: Fail
    name: vqueue.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - queues
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-schemareplication
    failurePolicy: Fail
    name: vschemareplication-v1beta1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - schemareplications
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-shovel
    failurePolicy: Fail
    name: vshovel-v1beta1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - shovels
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1alpha1-superstream
    failurePolicy: Fail
    name: vsuperstream-v1alpha1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - superstreams
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-topicpermission
    failurePolicy: Fail
    name: vtopicpermission-v1beta1.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - topicpermissions
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-user
    failurePolicy: Fail
    name: vuser.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: messaging-topology-webhook-service
        namespace: syn-rabbitmq-operator
        path: /validate-rabbitmq-com-v1beta1-vhost
    failurePolicy: Fail
    name: vvhost.kb.io
    rules:
      - apiGroups:
          - rabbitmq.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - vhosts
    sideEffects: None
